--- a/WestWorldWithMessaging.vcxproj.filters
+++ b/WestWorldWithMessaging.vcxproj.filters
@@ -80,9 +80,6 @@
     <ClInclude Include="2D\SVector2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ConsoleUtils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="FSM\State.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -101,8 +98,8 @@
     <ClInclude Include="Time\CrudeTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="utils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
