--- a/WestWorldWithMessaging.vcxproj.filters
+++ b/WestWorldWithMessaging.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="BoozerOwnedStates.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AIThreadManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="AIThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BoozerOwnedStates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AIThreadManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AIThread.h">
