--- a/WestWorldWithMessaging.vcxproj.filters
+++ b/WestWorldWithMessaging.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="BoozerOwnedStates.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Thread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEntity.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BoozerOwnedStates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
